Рефакторинг.